# gridhand

./: Cargo.toml  LICENSE  README.md  setup.sh
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md
skills/gridhand/: SKILL.md
skills/gui-tool/: SKILL.md
src/: grid.rs  json.rs  keycombo.rs  main.rs  validate.rs
src/platform/: mod.rs  png.rs  screenshot.rs  windows.rs
src/platform/dbus/: auth.rs  connection.rs  message.rs  mod.rs  types.rs
src/platform/linux/: display.rs  mod.rs  screenshot.rs  uinput.rs  windows.rs
src/platform/linux/dbus/: connection.rs  message.rs  types.rs
src/platform/macos/: ffi.rs  input.rs  mod.rs  screenshot.rs  windows.rs
src/platform/windows_os/: ffi.rs  input.rs  mod.rs  screenshot.rs  windows.rs
