[package]
name = "gridhand"
version = "0.3.2"
edition = "2024"
rust-version = "1.88"
description = "Zero-dependency cross-platform CLI for GUI automation — screenshots, window management, mouse/keyboard, JSON in/out. Clicks by labeled grid cell: no pixel coordinates, no accessibility tree. Built for AI agents."
authors = ["Zach Rouan <ZachRouan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZachRouan/gridhand"
homepage = "https://github.com/ZachRouan/gridhand"
keywords = ["gui", "automation", "screenshot", "agent", "gridhand"]
categories = ["command-line-utilities", "os"]
include = ["src/**", "LICENSE", "README.md", "Cargo.lock"]

[[bin]]
name = "gridhand"
path = "src/main.rs"

[dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
